test-deploy/project/smart-proxy-v2.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: smart-proxy-v2
  namespace: test-deploy
  labels:
    app: smart-proxy-service
    version: v2.0
spec:
  replicas: 2
  selector:
    matchLabels:
      app: smart-proxy-service
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: smart-proxy-service
    spec:
      containers:
      - name: smart-proxy-service
        image: reg.qiniu.com/exiaohao/smart-proxy:v2.0
        imagePullPolicy: Always
        ports:
        - containerPort: 9999
        command: ["go", "run", "server.go"]
        resources:
          limits:
            memory: "1024M"
      imagePullSecrets:
      - name: qiniu
