test-deploy/project/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: istio-system
  name: grafana
spec:
  type: NodePort
  ports:
  - port: 3000
    protocol: TCP
    nodePort: 32100
  selector:
    app: grafana
