test-deploy/project/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-smart-proxy
  namespace: test-deploy
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 9999
    protocol: TCP
  selector:
    app: smart-proxy-service
