test-deploy/project/smart-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: test-deploy
  name: smart-proxy
spec:
  type: NodePort
  ports:
  - port: 9999
    protocol: TCP
    nodePort: 30001
  selector:
    app: smart-proxy-service
