test-deploy/project/contour.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: smart-proxy-service
  name: smart-proxy-service
  namespace: test-deploy
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9999
  selector:
    app: smart-proxy-service
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: smart-proxy-service
  namespace: test-deploy
  labels:
    app: smart-proxy-service
spec:
  backend:
    serviceName: smart-proxy-service
    servicePort: 80
