test-deploy/project/ingress2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "hello-world-svc"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: smart-proxy
          servicePort: 9999
